--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	</head>
 
 	<body>
-		Test
+		This webpage is currently under construction! It will be a personal landing page soon!
 	</body>
 </html>
