--- a/projects/ashevillegreenways/index.html
+++ b/projects/ashevillegreenways/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>Asheville Greenways</title>
+        
+        <link rel="shortcut icon" type="image/png" href="img/favicon.ico"/>
 
 		<!--external stylesheet links here-->
         <link rel="stylesheet" href="css/leaflet.css"/>
