--- a/projects/ashevillegreenways/index.html
+++ b/projects/ashevillegreenways/index.html
@@ -36,7 +36,7 @@
             <div id="titleContainer" ><div id="mapTitle">Asheville <a id="greenwayText">Greenway</a> Explorer</div></div>
             <div id="map"></div>
             <div id="infoDiv">
-                <div id="startInfo"><h2>Instructions:</h2><p>This is a simple map tool to view greenway information in Asheville, NC and it's metro area.<br><br> Use the side bar to select a greenway to begin exploring! <a href="https://www.google.com" target="_blank">More info</a></p></div>
+                <div id="startInfo"><h2>Instructions:</h2><p>This is a simple map tool to view greenway information in Asheville, NC and it's metro area.<br><br> Use the side bar to select a greenway to begin exploring! <a href="https://connectbuncombe.org/" target="_blank">More info</a></p></div>
             </div>
         </div>
         
