--- a/projects/babyjames/index.html
+++ b/projects/babyjames/index.html
@@ -24,7 +24,7 @@
             <p id="MainTitle">Where Is Sweet Baby James?</p>
             <p id="titleLine1">What has been the most given baby name for the last 100 years? James!<br><br>Use this map to explore the most popular baby name through time.</p>
             <p id="sourceInfo">Data Source: <a href="https://www.ssa.gov/cgi-bin/namesbystate.cgi" target="_blank">https://www.ssa.gov/cgi-bin/namesbystate.cgi</a> | Gathered and Organized, Feb. 2018</p>
-            <p id="youtubeLink"><a href="https://www.youtube.com/watch?v=XXVg07t1HCE" target="_blank">Get Inspired</a></p>
+            <p id="youtubeLink"><a href="https://www.youtube.com/watch?v=c1I0dbTg210" target="_blank">Get Inspired</a></p>
         </div>
         <!--Map Content-->
         <div id="map"></div>
