--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <span id="elevatorTag3">
                                 <span class="elevatorTag3"><p>BS in Geographic Science, JMU</p></span>
                                 <span class="elevatorTag3"><p>MS in GIS and Cartography, UW-Madison </p></span>
-                                <span class="elevatorTag3"><p>Passion, Drive and 5 + yrs of Experiance</p></span>
+                                <span class="elevatorTag3"><p>Passion, Drive and 5 + yrs of Experience</p></span>
                         </span>
                     </div>
                 </div>  
