Change Home Page Footer Click
Wrong id refrerenced made all pages scroll before navigating to home - changed id of home footer image to fix

--- a/projects/map501/index.html
+++ b/projects/map501/index.html
@@ -102,7 +102,7 @@
     <div class="breakDiv"></div>
     
     <div id="footDiv">
-        <img src="img/Logo1_map501.svg" id="footImage" alt="BackImageMtns">
+        <img src="img/Logo1_map501.svg" id="footImageHome" alt="BackImageMtns">
     </div>
     
     <!--  Add scripts here-->
