Update website content
added three new projects, also updated resume and added full cv

--- a/index.html
+++ b/index.html
@@ -102,6 +102,25 @@
         </div>
 
         <!--Images should be 1000px W x 800px H for thumbs-->
+         <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Asheville River Park</h2>
+                    <div class="portImage"><a href="https://uwandrick.github.io/projects/ashevilleriverpark/" target="_blank"><img src="docs/preview/riverpark_preview.PNG" alt="Riverpark Image" class="portImg"></a></div>
+                    <p class="portDesc">Mapping app of a local park. Allows visitors to explore and sumbit issues to a central database.</p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Map501</h2>
+                    <div class="portImage"><a href="https://uwandrick.github.io/projects/map501/" target="_blank"><img src="docs/preview/map501_preview.PNG" alt="Map501 Image" class="portImg"></a></div>
+                    <p class="portDesc">A knowledge hub for nonprofit mapping. It acts as a starting place to point users in the right direction.</p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Regression Visualization</h2>
+                    <div class="portImage"><a href="https://uwandrick.github.io/projects/regression-project/" target="_blank"><img src="docs/preview/regression_preview.PNG" alt="Regression Image" class="portImg"></a></div>
+                    <p class="portDesc">Tool to visualize regression relationship between nitrate rates in wells and cancer rates.</p>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -151,6 +170,11 @@
             <div id="downloadResumeHolder"> 
                 <div id="resumeContainer">  
                     <div class="resumeImage"><a href="docs/content/BradleyAndrick_Resume.pdf" target="_blank"><div id="downloadText">View Resume PDF</div></a></div>
+                </div>  
+            </div>
+            <div id="downloadCVHolder"> 
+                <div id="cvContainer">  
+                    <div class="resumeImage"><a href="docs/content/BradleyAndrick_CV.pdf" target="_blank"><div id="downloadText">View CV PDF</div></a></div>
                 </div>  
             </div>
             <h2 style="padding-bottom:20px;">The Basics</h2>
