Update index page
fix spelling errors

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-md-4">
                     <h2>Asheville River Park</h2>
                     <div class="portImage"><a href="https://uwandrick.github.io/projects/ashevilleriverpark/" target="_blank"><img src="docs/preview/riverpark_preview.PNG" alt="Riverpark Image" class="portImg"></a></div>
-                    <p class="portDesc">Mapping app of a local park. Allows visitors to explore and sumbit issues to a central database.</p>
+                    <p class="portDesc">Mapping app of a local park that allows visitors to explore and submit issues to a central database.</p>
                 </div>
                 <div class="col-md-4">
                     <h2>Map501</h2>
