Baby James Update
Edit to add @media tags to handle smaller screens and show error message

--- a/projects/babyjames/index.html
+++ b/projects/babyjames/index.html
@@ -19,16 +19,18 @@
 	</head>
 
 	<body>
-        <!--Title Content-->
-        <div id="MapTitle">
-            <p id="MainTitle">Where Is Sweet Baby James?</p>
-            <p id="titleLine1">What has been the most given baby name for the last 100 years? James!<br><br>Use this map to explore the most popular baby name through time.</p>
-            <p id="sourceInfo">Data Source: <a href="https://www.ssa.gov/cgi-bin/namesbystate.cgi" target="_blank">https://www.ssa.gov/cgi-bin/namesbystate.cgi</a> | Gathered and Organized, Feb. 2018</p>
-            <p id="youtubeLink"><a href="https://www.youtube.com/watch?v=c1I0dbTg210" target="_blank">Get Inspired</a></p>
+        <div id="screenSmallText">Oops. <br><br>Looks like this app needs to be used on a larger screen!</div>
+        <div id="appWrapper">
+            <!--Title Content-->
+            <div id="MapTitle">
+                <p id="MainTitle">Where Is Sweet Baby James?</p>
+                <p id="titleLine1">What has been the most given baby name for the last 100 years? James!<br><br>Use this map to explore the most popular baby name through time.</p>
+                <p id="sourceInfo">Data Source: <a href="https://www.ssa.gov/cgi-bin/namesbystate.cgi" target="_blank">https://www.ssa.gov/cgi-bin/namesbystate.cgi</a> | Gathered and Organized, Feb. 2018</p>
+                <p id="youtubeLink"><a href="https://www.youtube.com/watch?v=c1I0dbTg210" target="_blank">Get Inspired</a></p>
+            </div>
+            <!--Map Content-->
+            <div id="map"></div>
         </div>
-        <!--Map Content-->
-        <div id="map"></div>
-
 		<!--external script links here-->
         <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
         <script type="application/javascript" src="lib/leaflet_marker_cluster/leaflet.markercluster-src.js"></script>
