--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <span id="elevatorTag3">
                                 <span class="elevatorTag3"><p>BS in Geographic Science, JMU</p></span>
                                 <span class="elevatorTag3"><p>MS in GIS and Cartography, UW-Madison </p></span>
-                                <span class="elevatorTag3"><p>Passion, Drive and 5 + yrs of Experience</p></span>
+                                <span class="elevatorTag3"><p>Passion, Drive and 6 + yrs of Experience</p></span>
                         </span>
                     </div>
                 </div>  
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-112" id="BradleyImageHolder">
               <img src="img/BradleyImage.jpg" alt="Bradley Image" id="BradleyImg">
-                <div id="photoText">My wife Olivia and I near our home in Asheville, NC.</div>
+                <div id="photoText">My wife Olivia and I near our home in North Carolina.</div>
             </div>
             <hr>
         </div>   
@@ -189,7 +189,8 @@
                 <div  class="col-md-6">
                     <div class="resumeText">
                         <h4 style="font-weight:bold;"><u>Experience:</u></h4>
-                        <p> Technical Solutions Administrator/Programmer, Arbormetrics Solutions<span style="float:right;">2016 - present</span></p>
+                        <p> Lead Software Engineer, Theorem Geo Inc.<span style="float:right;">2019 - present</span></p>
+                        <p> Technical Solutions Administrator/Programmer, Arbormetrics Solutions<span style="float:right;">2016 - 2019</span></p>
                         <p> GIS Coordinator, JMU Facilities Engineering Department<span style="float:right;">2015 - 2016</span></p>
                         <p> Geospatial Developer, JMU (Virginia Foundation for the Humanities Grant)<span style="float:right;">2016</span></p>
                         <p> GIS Technician, JMU Facilities Engineering Department<span style="float:right;">2014 - 2015</span></p>
