--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div>
                 <div>   
                   <div  id="elevatorTag4Head" class="aboutWWH">Anything Else?</div>  
-                  <span id="elevatorTag4"><p>I'm a total map nerd! But when I'm not doing something tech or map related you can usually find me building something in my amature woodshop, fixing up our 90 year old house, going to some event or brewery here in Asheville or hiking in the surrounding mountains with my amazing, beautiful and all around stunning wife Olivia and our slightly less stunning but still adorable four legged fur-baby, rescue pup Luna.</p></span>
+                  <span id="elevatorTag4"><p>I'm a total map nerd! But when I'm not doing something tech or map related you can usually find me building something in my amature woodshop, fixing up our 60 yr old house, going to some event or brewery here in NC or hiking in the surrounding mountains with my amazing, beautiful and all around stunning wife Olivia and our slightly less stunning but still adorable four legged fur-baby, rescue pup Luna.</p></span>
                 </div>
             </div>
             <div class="col-md-112" id="BradleyImageHolder">
