--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div id="descriptionBradley"><span style="font-weight: bold;">Geographer</span> Turned <span style="font-weight: bold; color: #e86850;">Software Developer.</span></div>
                 </div> 
             </div>
-            <div id="scrollText">Scroll</div>
+            <div id="scrollText"></div>
             <div id="downArrow"><img src="img/Arrow.png" alt="Scroll Down" height="25"></div> 
             <div id="IconLink">
                 <a href="https://www.linkedin.com/in/bradleyandrick" target="_blank"><img src="img/linkedInHex.png" alt="Social Icons" height="50"></a>
