--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                 <div  class="col-md-6">
                     <div class="resumeText">
                         <h4 style="font-weight:bold;"><u>Experience:</u></h4>
-                        <p> Lead Software Engineer, Theorem Geo Inc.<span style="float:right;">2019 - present</span></p>
+                        <p> Senior IT Programmer Analyst, Mecklenburg County, NC (Charlotte).<span style="float:right;">2021 - present</span></p>
+                        <p> Lead Software Engineer, Theorem Geo Inc.<span style="float:right;">2019 - 2021</span></p>
                         <p> Technical Solutions Administrator/Programmer, Arbormetrics Solutions<span style="float:right;">2016 - 2019</span></p>
                         <p> GIS Coordinator, JMU Facilities Engineering Department<span style="float:right;">2015 - 2016</span></p>
                         <p> Geospatial Developer, JMU (Virginia Foundation for the Humanities Grant)<span style="float:right;">2016</span></p>
