add image and change ev info to map 501 collector

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <p class="portDesc">A map of a 21 day bike tour of Iceland. Project was to highlight shaded relief and temporal flow.</p>
                 </div>
                 <div class="col-md-4">
-                    <h2>EVs Infographic</h2>
-                    <div class="portImage"><a href="docs/content/BradleyAndrick_InfoGraphic_EVs.pdf" target="_blank"><img src="docs/preview/info_elec_preview.png" alt="EV Image" class="portImg"></a></div>
-                    <p class="portDesc">Longform Infographic project highlighting the importance of why people should switch to electric vehicles.</p>
+                    <h2>Data Collector App</h2>
+                    <div class="portImage"><a href="https://uwandrick.github.io/projects/map501/501collector.html" target="_blank"><img src="docs/preview/Map501Collector_preview.PNG" alt="Collector Image" class="portImg"></a></div>
+                    <p class="portDesc">Simple data collector application for easily capturing and exporting point data.</p>
                 </div>
                 <div class="col-md-4">
                     <h2>DMBS Comparison</h2>
