change image, and size collector preview

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-md-4">
                     <h2>Data Collector App</h2>
-                    <div class="portImage"><a href="https://uwandrick.github.io/projects/map501/501collector.html" target="_blank"><img src="docs/preview/Map501Collector_preview.PNG" alt="Collector Image" class="portImg"></a></div>
+                    <div class="portImage"><a href="https://uwandrick.github.io/projects/map501/501collector.html" target="_blank"><img src="docs/preview/map501Collector_preview.png" alt="Collector Image" class="portImg"></a></div>
                     <p class="portDesc">Simple data collector application for easily capturing and exporting point data.</p>
                 </div>
                 <div class="col-md-4">
