--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="https://www.linkedin.com/in/bradleyandrick" target="_blank"><img src="img/linkedInHex.png" alt="Social Icons" height="50"></a>
             </div>
             <div id="IconGit">
-                <a href="https://github.com/uwAndrick" target="_blank"><img src="img/githubHex.png" alt="Social Icons" height="50"></a>
+                <a href="https://github.com/bradleyandrick" target="_blank"><img src="img/githubHex.png" alt="Social Icons" height="50"></a>
             </div>
             <div id="IconTwit">
                 <a href="https://twitter.com/geo_andrick" target="_blank"><img src="img/twitterHex.png" alt="Social Icons" height="50"></a>
