--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2>Asheville River Park</h2>
-                    <div class="portImage"><a href="https://uwandrick.github.io/projects/ashevilleriverpark/" target="_blank"><img src="docs/preview/riverpark_preview.PNG" alt="Riverpark Image" class="portImg"></a></div>
+                    <div class="portImage"><a href="https://bradleyandrick.github.io/projects/ashevilleriverpark/" target="_blank"><img src="docs/preview/riverpark_preview.PNG" alt="Riverpark Image" class="portImg"></a></div>
                     <p class="portDesc">Mapping app of a local park that allows visitors to explore and submit issues to a central database.</p>
                 </div>
                 <div class="col-md-4">
                     <h2>Map501</h2>
-                    <div class="portImage"><a href="https://uwandrick.github.io/projects/map501/" target="_blank"><img src="docs/preview/map501_preview.PNG" alt="Map501 Image" class="portImg"></a></div>
+                    <div class="portImage"><a href="https://bradleyandrick.github.io/projects/map501/" target="_blank"><img src="docs/preview/map501_preview.PNG" alt="Map501 Image" class="portImg"></a></div>
                     <p class="portDesc">A knowledge hub for nonprofit mapping. It acts as a starting place to point users in the right direction.</p>
                 </div>
                 <div class="col-md-4">
                     <h2>Regression Visualization</h2>
-                    <div class="portImage"><a href="https://uwandrick.github.io/projects/regression-project/" target="_blank"><img src="docs/preview/regression_preview.PNG" alt="Regression Image" class="portImg"></a></div>
+                    <div class="portImage"><a href="https://bradleyandrick.github.io/projects/regression-project/" target="_blank"><img src="docs/preview/regression_preview.PNG" alt="Regression Image" class="portImg"></a></div>
                     <p class="portDesc">Tool to visualize regression relationship between nitrate rates in wells and cancer rates.</p>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-md-4">
                     <h2>Data Collector App</h2>
-                    <div class="portImage"><a href="https://uwandrick.github.io/projects/map501/501collector.html" target="_blank"><img src="docs/preview/map501CollectorApp_preview.png" alt="Collector Image" class="portImg"></a></div>
+                    <div class="portImage"><a href="https://bradleyandrick.github.io/projects/map501/501collector.html" target="_blank"><img src="docs/preview/map501CollectorApp_preview.png" alt="Collector Image" class="portImg"></a></div>
                     <p class="portDesc">Simple data collector application for easily capturing and exporting point data.</p>
                 </div>
                 <div class="col-md-4">
@@ -142,7 +142,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2>Asheville Greenway Map</h2>
-                    <div class="portImage"><a href="https://uwandrick.github.io/projects/ashevillegreenways/" target="_blank"><img src="docs/preview/bikeMap_preview.png" alt="Bike Image" class="portImg"></a></div>
+                    <div class="portImage"><a href="https://bradleyandrick.github.io/projects/ashevillegreenways/" target="_blank"><img src="docs/preview/bikeMap_preview.png" alt="Bike Image" class="portImg"></a></div>
                     <p class="portDesc">Web map exploration tool showing greenways in Asheville, NC.</p>
                 </div>
                 <div class="col-md-4">
@@ -152,7 +152,7 @@
                 </div>
                  <div class="col-md-4">
                     <h2>Baby James Map</h2>
-                    <div class="portImage"><a href="https://uwandrick.github.io/projects/babyjames/" target="_blank"><img src="docs/preview/babyJames_preview.png" alt="James Image" class="portImg"></a></div>
+                    <div class="portImage"><a href="https://bradleyandrick.github.io/projects/babyjames/" target="_blank"><img src="docs/preview/babyJames_preview.png" alt="James Image" class="portImg"></a></div>
                     <p class="portDesc">Web map tool that highlights the prevalence of baby names through time. </p>
                </div>
             </div>
