--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div>
                     <div id="nameBradley">Bradley A. Andrick</div>
                     <hr style="border-width: 1px; border-color: #c1c1c1">
-                    <div id="descriptionBradley"><span style="font-weight: bold;">Geographer</span> Turned <span style="font-weight: bold; color: #e86850;">Software Developer.</span></div>
+                    <div id="descriptionBradley"><span style="font-weight: bold; color: #e86850;">{Geospatial} Software Engineer</span></div>
                 </div> 
             </div>
             <div id="scrollText"></div>
