--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <h2>Asheville River Park</h2>
+          <h2>Data Collector App</h2>
           <div class="portImage">
             <a
-              href="https://bradleyandrick.github.io/projects/ashevilleriverpark/"
+              href="https://bradleyandrick.github.io/projects/map501/501collector.html"
               target="_blank"
               ><img
-                src="docs/preview/riverpark_preview.PNG"
-                alt="Riverpark Image"
+                src="docs/preview/map501CollectorApp_preview.png"
+                alt="Collector Image"
                 class="portImg"
             /></a>
           </div>
           <p class="portDesc">
-            Mapping app of a local park that allows visitors to explore and
-            submit issues to a central database.
+            Simple data collector application for easily capturing and exporting
+            point data.
           </p>
         </div>
         <div class="col-md-4">
@@ -121,21 +121,21 @@
             to point users in the right direction.
           </p>
         </div>
-                <div class="col-md-4">
-          <h2>Data Collector App</h2>
+         <div class="col-md-4">
+          <h2>Asheville River Park</h2>
           <div class="portImage">
             <a
-              href="https://bradleyandrick.github.io/projects/map501/501collector.html"
+              href="https://bradleyandrick.github.io/projects/ashevilleriverpark/"
               target="_blank"
               ><img
-                src="docs/preview/map501CollectorApp_preview.png"
-                alt="Collector Image"
+                src="docs/preview/riverpark_preview.PNG"
+                alt="Riverpark Image"
                 class="portImg"
             /></a>
           </div>
           <p class="portDesc">
-            Simple data collector application for easily capturing and exporting
-            point data.
+            Mapping app of a local park that allows visitors to explore and
+            submit issues to a central database.
           </p>
         </div>
       </div>
@@ -160,7 +160,7 @@
           </p>
         </div>
         <div class="col-md-4">
-          <h2>Asheville Greenway Map</h2>
+          <h2>Greenway Map</h2>
           <div class="portImage">
             <a
               href="https://bradleyandrick.github.io/projects/ashevillegreenways/"
